# QtTranslator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  translator.cpp  translator.h
